--- a/My-project.html
+++ b/My-project.html
@@ -30,6 +30,7 @@
       }
       .land{
         background-image: url(./Images/pngtree-family-at-a-picnic-on-the-ground-in-green-field-image_2520083.jpg);
+        width:100%;
         background-size: cover;
         background-position: center;
         height:300px;
@@ -51,7 +52,8 @@
       .overlay h1{
         display:inline-block;
         font-size: 5rem;
-        border:2px solid;
+        border-top:2px solid;
+        border-bottom:2px solid;
       }
       .border-primary {
     --bs-border-opacity: 1;
@@ -104,7 +106,7 @@
     </header>
   </section>
   <main >
-    <section class="container" id="main">
+    <section id="main">
       <div class="land">
         <div class="overlay" style="text-align: center;">
           <h1>SOLATIUM HOTELS</h1>
