--- a/My-project.html
+++ b/My-project.html
@@ -39,7 +39,7 @@
         max-height:500px;
       }
       .overlay{
-        border:2px solid red;
+        border:2px solid rgb(245, 245, 245);
         height:100%;
         background-color: rgba(0, 0, 0, 0.363);
         display:grid;
